external-crates/move/crates/move-compiler/tests/sui_mode/id_leak/invalid_object_missing_id.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: sui
  edition: legacy
  lint: false
---
error[E04016]: too few arguments
  ┌─ tests/sui_mode/id_leak/invalid_object_missing_id.move:9:9
  │
9 │         S {}
  │         ^^^^ Missing argument for field 'id' in 'a::test::S'
